# raquet

./: .gitignore  LICENSE  README.md  deforest_carbon.parquet  deforest_carbon.vrt  geotiff2raquet.py  pyproject.toml  raquet2geotiff.py  requirements.txt
.cursor/rules/: testing.mdc
.github/workflows/: publish.yml  unit-tests.yml  update-docs-version.yml
docs/: CNAME  _config.yml  cli.md  engines.md  faq.md  index.md  performance.md  quadbin.md  viewer-how-it-works.html  viewer.html  viewer.md
docs/_layouts/: default.html
docs/assets/css/: style.css
examples/: TCI.parquet  cfsr_sst.parquet  colored.parquet  colored.tif  europe.parquet  europe.tif  example_data.parquet  example_metadata.json  san-francisco.tif  server_viewer.py  test_float32.parquet
format-specs/: raquet.md  rasquet.md
raquet/: __init__.py  cli.py  earthengine.py  geotiff2raquet.py  imageserver.py  raquet2geotiff.py  raster2raquet.py  validate.py
raquet-tests/: test-geotiff2raquet.py  test-raquet2geotiff.py
scripts/: benchmark.py  download_dem.py  download_dem_s3.py  prepare_dem.py  run_15gb.sh  run_all.sh
test_outputs/: tci_512_interleaved_jpeg.parquet  tci_512_interleaved_webp.parquet  tci_512_sequential_gzip.parquet  tci_interleaved_gzip.parquet  tci_interleaved_jpeg.parquet  tci_interleaved_webp.parquet  tci_sequential_gzip.parquet
tests/: Annual_NLCD_LndCov_2023_CU_C1V0-cog.tif  Annual_NLCD_LndCov_2023_CU_C1V0.tif  Milton_2024-excerpt.tiff  big-world.tif  civ.tif  colored.parquet  conftest.py  geotiff-discreteloss_2023-cog.tif  geotiff-discreteloss_2023.tif  n37_w123_1arc_v2-cog.tif  n37_w123_1arc_v2.tif  test_cli.py  test_earthengine.py  test_imageserver.py  test_raquet2geotiff.py
