[project]
name = "raquet"
version = "0.3.0"
description = "Raquet - Raster data in Parquet format with QUADBIN spatial indexing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "GDAL>=3",
    "click>=8",
    "mercantile>=1",
    "pyarrow>=19",
    "quadbin>=0.2.2",
]

[project.optional-dependencies]
numpy = ["numpy>=2"]
rich = ["rich>=13"]
imageserver = [
    "httpx>=0.25",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "numpy>=2",
]
all = [
    "numpy>=2",
    "rich>=13",
    "httpx>=0.25",
    "rasterio>=1.3",
    "pyproj>=3.6",
]

[tool.setuptools]
packages = ["raquet"]

[project.scripts]
raquet = "raquet.cli:main"
# Legacy entry points for backwards compatibility
geotiff2raquet = "raquet.__init__:geotiff2raquet_main"
raquet2geotiff = "raquet.__init__:raquet2geotiff_main"
